test/fail/neg-boundary.as
let _ : Int8 = -128;
